--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1551,7 +1551,7 @@
 /* Basic */
 
 	body {
-		background: #f6e9e1;
+		background: #ebede7;
 	}
 
 		body.is-loading *, body.is-loading *:before, body.is-loading *:after {
@@ -2509,7 +2509,7 @@
 /* Footer */
 
 	#footer {
-		background: #f6e9e1;
+		background: #ebede7;
 		color: #7c8081;
 		padding: 5em 5em 10em 5em;
 		text-align: center;
