--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2065,8 +2065,8 @@
 		input[type="submit"].special,
 		input[type="reset"].special,
 		.button.special {
-			background: #83d3c9;
-			border-color: #83d3c9;
+			background: #ff866f;
+			border-color: #ff866f;
 			color: #fff !important;
 		}
 
