--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1579,7 +1579,7 @@
 		-webkit-transition: color 0.2s ease-in-out, border-color 0.2s ease-in-out, background-color 0.2s ease-in-out;
 		-ms-transition: color 0.2s ease-in-out, border-color 0.2s ease-in-out, background-color 0.2s ease-in-out;
 		transition: color 0.2s ease-in-out, border-color 0.2s ease-in-out, background-color 0.2s ease-in-out;
-		color: #ff866f;
+		color: #000598;
 		text-decoration: none;
 		border-bottom: dotted 1px;
 	}
