--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -161,7 +161,7 @@ hr.small {
     position: relative;
     width: 100%;
     height: 100%;
-    background: url(../photo/ph1/2.jpg) no-repeat center center scroll;
+    background: url(photo/ph1/2_sm.jpg) no-repeat center center scroll;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
