--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -1612,6 +1612,15 @@ pre code {
   margin-right: -15px;
   margin-left: -15px;
 }
+.row a p {
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, .4);
+  text-align: center;
+  opacity: 0;
+}
 .row a:hover p {
   opacity: .5;
     -moz-transition: all 0.4s ease-out;  /* FF4+ */
