--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -1612,6 +1612,14 @@ pre code {
   margin-right: -15px;
   margin-left: -15px;
 }
+.row:hover {
+    opacity: 1; 
+    -moz-transition: all 0.4s ease-out;  /* FF4+ */
+    -o-transition: all 0.4s ease-out;  /* Opera 10.5+ */
+    -webkit-transition: all 0.4s ease-out;  /* Saf3.2+, Chrome */
+    -ms-transition: all 0.4s ease-out;  /* IE10? */
+    transition: all 0.4s ease-out;  
+}
 
 /*.hover {
   position: absolute;
