--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -1613,7 +1613,7 @@ pre code {
   margin-left: -15px;
 }
 .row:hover {
-    opacity: 1; 
+    opacity: .5; 
     -moz-transition: all 0.4s ease-out;  /* FF4+ */
     -o-transition: all 0.4s ease-out;  /* Opera 10.5+ */
     -webkit-transition: all 0.4s ease-out;  /* Saf3.2+, Chrome */
@@ -1629,7 +1629,7 @@ pre code {
   background: rgba(0, 0, 0, .4);
   text-align: center;
   opacity: 0;
-}*/
+}
 .hover {
   -webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
   transition: opacity 0.35s, transform 0.35s;
@@ -1691,7 +1691,7 @@ pre code {
   filter: alpha(opacity=100);
   -webkit-transform: translate3d(0,0,0);
   transform: translate3d(0,0,0);
-}
+}*/
 .embed-responsive {
     position: relative;
     display: block;
