--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -85,6 +85,12 @@ sub {
 }
 img {
   border: 0;
+  opacity: 1.0;
+  filter: alpha(opacity=100);
+}
+img:hover {
+  opacity: 0.5;
+  filter: alpha(opacity=50);
 }
 svg:not(:root) {
   overflow: hidden;
