--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -88,7 +88,8 @@ img {
   opacity: 1.0;
   filter: alpha(opacity=100);
 }
-img:hover {
+img:hover,
+img a: hover {
   color: #fff;
   opacity: 0.3;
   filter: alpha(opacity=30);
@@ -1131,6 +1132,9 @@ img {
   max-width: 100%;
   height: auto;
 }
+.img-responsive: hover {
+  opacity: .3;
+}
 .img-rounded {
   border-radius: 6px;
 }
@@ -1619,8 +1623,9 @@ pre code {
   margin-right: -15px;
   margin-left: -15px;
 }
-.row:hover {
+.row img:hover {
     opacity: .5; 
+    color: #fff;
     -moz-transition: all 0.4s ease-out;  /* FF4+ */
     -o-transition: all 0.4s ease-out;  /* Opera 10.5+ */
     -webkit-transition: all 0.4s ease-out;  /* Saf3.2+, Chrome */
