--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -1133,6 +1133,7 @@ img {
   height: auto;
 }
 .img-responsive: hover {
+  color: #fff;
   opacity: .3;
 }
 .img-rounded {
@@ -1624,6 +1625,15 @@ pre code {
   margin-left: -15px;
 }
 .row img:hover {
+    opacity: .5; 
+    color: #fff;
+    -moz-transition: all 0.4s ease-out;  /* FF4+ */
+    -o-transition: all 0.4s ease-out;  /* Opera 10.5+ */
+    -webkit-transition: all 0.4s ease-out;  /* Saf3.2+, Chrome */
+    -ms-transition: all 0.4s ease-out;  /* IE10? */
+    transition: all 0.4s ease-out;  
+}
+.row:hover {
     opacity: .5; 
     color: #fff;
     -moz-transition: all 0.4s ease-out;  /* FF4+ */
