--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -93,6 +93,9 @@ img a: hover {
   color: #fff;
   opacity: 0.3;
   filter: alpha(opacity=30);
+  -webkit-transition: opacity .5s;
+  -moz-transition: opacity .5s;
+  transition: opacity .5s;
 }
 svg:not(:root) {
   overflow: hidden;
@@ -1132,8 +1135,7 @@ img {
   max-width: 100%;
   height: auto;
 }
-.img-responsive: hover {
-  color: #fff;
+.img-responsive: hover img: hover {
   opacity: .3;
 }
 .img-rounded {
@@ -1624,18 +1626,10 @@ pre code {
   margin-right: -15px;
   margin-left: -15px;
 }
-.row img:hover {
+.row img:hover,
+.row: hover img,
+.row: hover {
     opacity: .5; 
-    color: #fff;
-    -moz-transition: all 0.4s ease-out;  /* FF4+ */
-    -o-transition: all 0.4s ease-out;  /* Opera 10.5+ */
-    -webkit-transition: all 0.4s ease-out;  /* Saf3.2+, Chrome */
-    -ms-transition: all 0.4s ease-out;  /* IE10? */
-    transition: all 0.4s ease-out;  
-}
-.row:hover {
-    opacity: .5; 
-    color: #fff;
     -moz-transition: all 0.4s ease-out;  /* FF4+ */
     -o-transition: all 0.4s ease-out;  /* Opera 10.5+ */
     -webkit-transition: all 0.4s ease-out;  /* Saf3.2+, Chrome */
