--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -92,9 +92,14 @@ img:hover,
 img a:hover {
   opacity: 0.3;
   filter: alpha(opacity=30);
-  -webkit-transition: opacity .5s;
+  /*-webkit-transition: opacity .5s;
   -moz-transition: opacity .5s;
-  transition: opacity .5s;
+  transition: opacity .5s; */
+    -moz-transition: all 0.4s ease-out;  /* FF4+ */
+    -o-transition: all 0.4s ease-out;  /* Opera 10.5+ */
+    -webkit-transition: all 0.4s ease-out;  /* Saf3.2+, Chrome */
+    -ms-transition: all 0.4s ease-out;  /* IE10? */
+    transition: all 0.4s ease-out;  
 }
 svg:not(:root) {
   overflow: hidden;
@@ -1134,13 +1139,6 @@ img {
   max-width: 100%;
   height: auto;
 }
-.img-responsive:hover, img:hover {
-  opacity: 0.3;
-  filter: alpha(opacity=30);
-  -webkit-transition: opacity .5s;
-  -moz-transition: opacity .5s;
-  transition: opacity .5s;
-}
 .img-rounded {
   border-radius: 6px;
 }
@@ -1628,16 +1626,6 @@ pre code {
 .row {
   margin-right: -15px;
   margin-left: -15px;
-}
-.row img:hover,
-.row: hover img,
-.row: hover {
-    opacity: .5; 
-    -moz-transition: all 0.4s ease-out;  /* FF4+ */
-    -o-transition: all 0.4s ease-out;  /* Opera 10.5+ */
-    -webkit-transition: all 0.4s ease-out;  /* Saf3.2+, Chrome */
-    -ms-transition: all 0.4s ease-out;  /* IE10? */
-    transition: all 0.4s ease-out;  
 }
 
 /*.hover {
