--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -85,13 +85,13 @@ sub {
 }
 img {
   border: 0;
-  opacity: 1.0;
-  filter: alpha(opacity=100);
+  opacity: .5;
+  filter: alpha(opacity=50);
 }
 img:hover,
 img a:hover {
-  opacity: 0.75;
-  filter: alpha(opacity=75);
+  opacity: 1;
+  filter: alpha(opacity=100);
   /*-webkit-transition: opacity .5s;
   -moz-transition: opacity .5s;
   transition: opacity .5s; */
