--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -85,22 +85,22 @@ sub {
 }
 img {
   border: 0;
-  opacity: .5;
-  filter: alpha(opacity=50);
+  opacity: 1;
+  filter: alpha(opacity=100);
 }
-img:hover,
+/*img:hover,
 img a:hover {
   opacity: 1;
   filter: alpha(opacity=100);
   /*-webkit-transition: opacity .5s;
   -moz-transition: opacity .5s;
-  transition: opacity .5s; */
-    -moz-transition: all 0.2s ease-in-out;  /* FF4+ */
-    -o-transition: all 0.2s ease-in-out;  /* Opera 10.5+ */
-    -webkit-transition: all 0.2s ease-in-out;  /* Saf3.2+, Chrome */
-    -ms-transition: all 0.2s ease-in-out;  /* IE10? */
+  transition: opacity .5s; /
+    -moz-transition: all 0.2s ease-in-out;  /* FF4+ /
+    -o-transition: all 0.2s ease-in-out;  /* Opera 10.5+ /
+    -webkit-transition: all 0.2s ease-in-out;  /* Saf3.2+, Chrome /
+    -ms-transition: all 0.2s ease-in-out;  /* IE10? /
     transition: all 0.2s ease-in-out;  
-}
+} */
 svg:not(:root) {
   overflow: hidden;
 }
@@ -1138,6 +1138,19 @@ img {
   display: block;
   max-width: 100%;
   height: auto;
+}
+
+.img-responsive a:hover {
+  opacity: 1;
+  filter: alpha(opacity=100);
+  /*-webkit-transition: opacity .5s;
+  -moz-transition: opacity .5s;
+  transition: opacity .5s; */
+    -moz-transition: all 0.2s ease-in-out;  /* FF4+ */
+    -o-transition: all 0.2s ease-in-out;  /* Opera 10.5+ */
+    -webkit-transition: all 0.2s ease-in-out;  /* Saf3.2+, Chrome */
+    -ms-transition: all 0.2s ease-in-out;  /* IE10? */
+    transition: all 0.2s ease-in-out;  
 }
 .img-rounded {
   border-radius: 6px;
