--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -85,8 +85,8 @@ sub {
 }
 img {
   border: 0;
-  opacity: 1;
-  filter: alpha(opacity=100);
+  /*opacity: 1;
+  filter: alpha(opacity=100);*/
 }
 /*img:hover,
 img a:hover {
