--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -1145,8 +1145,8 @@ opacity: .6;
   filter: alpha(opacity=60);
 }
 
-.img-responsive: hover, 
-.img-responsive a:hover {
+.img-responsive:hover, 
+/*.img-responsive a:hover*/ {
   opacity: 1;
   filter: alpha(opacity=100);
     -moz-transition: all 0.3s ease-in-out;  /* FF4+ */
@@ -6473,6 +6473,7 @@ button.close {
   z-index: 5;
   display: inline-block;
   margin-top: -10px;
+  color: #000;
 }
 .carousel-control .icon-prev,
 .carousel-control .glyphicon-chevron-left {
