--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -1141,14 +1141,13 @@ img {
 }
 
 .img-responsive {
-opacity: .6;
-  filter: alpha(opacity=60);
+opacity: 1;
+  filter: alpha(opacity=100);
 }
 
-.img-responsive:hover, 
-/*.img-responsive a:hover*/ {
-  opacity: 1;
-  filter: alpha(opacity=100);
+.img-responsive:hover, a:hover {
+  opacity: .6;
+  filter: alpha(opacity=60);
     -moz-transition: all 0.3s ease-in-out;  /* FF4+ */
     -o-transition: all 0.3s ease-in-out;  /* Opera 10.5+ */
     -webkit-transition: all 0.3s ease-in-out;  /* Saf3.2+, Chrome */
